fixed fullscreen video overflow

--- a/components/Modules/CarouselHero/carouselHero.module.scss
+++ b/components/Modules/CarouselHero/carouselHero.module.scss
@@ -139,17 +139,6 @@
     background-color: rgba(0, 0, 0, 0.33);
   }
 
-  video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
   .content {
     position: absolute;
     top: 0;
@@ -168,6 +157,17 @@
       padding: 0 1rem;
     }
   }
+}
+
+.videoFullscreen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .image {
